# GMixer

./: .clang-format  .gitignore  README.md  meson.build  meson_options.txt
src/: HeaderBar.cpp  HeaderBar.h  MainWindow.cpp  MainWindow.h  main.cpp  meson.build
src/backend/: Element.cpp  Element.h  ElementListModel.cpp  ElementListModel.h  ElementUtils.cpp  ElementUtils.h  FileUtils.cpp  FileUtils.h  Pipeline.cpp  Pipeline.h  PipelineCreation.cpp  PipelineCreation.h  PipelineIO.cpp  PipelineIO.h  PipelineListModel.cpp  PipelineListModel.h  meson.build
src/client/: Client.cpp  Client.h  ElementSelector.cpp  ElementSelector.h  GtkClient.cpp  GtkClient.h  HeaderBar.cpp  MainWindow.cpp  PipelineEditor.cpp  PipelineEditor.h  PipelineSelector.cpp  PipelineSelector.h  meson.build
src/client/cmd/: CommandLineLogger.cpp  CommandLineLogger.h  meson.build
src/client/common/: Logger.cpp  Logger.h  PipelineFactory.cpp  PipelineFactory.h  Storage.h  meson.build
src/client/graph/: ElementNode.cpp  ElementNode.h  GraphViewer.cpp  Node.cpp  Node.h  Pad.cpp  Property.cpp
src/client/gtk/: Dialogs.cpp  Dialogs.h  ElementListModel.h  (+14 more)
src/gstreamer/: Element.cpp  Element.h  ElementListModel.cpp  ElementUtils.cpp  ElementUtils.h  FileUtils.cpp  Pipeline.cpp  Pipeline.h  PipelineIO.cpp  PipelineIO.h  PipelineListModel.cpp  PipelineListModel.h  meson.build
src/signals/: Elements.h  Graph.h  Pipelines.h  Signals.cpp  meson.build
src/utils/: FileUtils.cpp  FileUtils.h  meson.build
src/views/: ElementSelector.cpp  ElementSelector.h  PipelineEditor.cpp  PipelineSelector.cpp  PipelineSelector.h  meson.build
(+27 files in other folders)
