
sources = files([
  'main.cpp',
  'MainWindow.cpp',
  'HeaderBar.cpp',
  'views/ElementSelector.cpp',
  'views/PipelineSelector.cpp',
  'backend/Pipeline.cpp',
  'backend/ElementListModel.cpp',
  'backend/ElementUtils.cpp'
])

executable('gmixer', sources, dependencies: [gst_libs, gtk_libs, cpp_libs])
